modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
@@ -80,7 +80,7 @@
                             <td>No</td>
                             {% endif %}
                                 
-                            <td>View</td>
+                            <td><a href="#">View</a></td>
                         </tr>
                         {% endfor %}
                             
