modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
@@ -80,7 +80,7 @@
                             <td>No</td>
                             {% endif %}
                                 
-                            <td><a href="#">View</a></td>
+                            <td><a href="{% url 'product_inventory' product.id %}">View</a></td>
                         </tr>
                         {% endfor %}
                             
