--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html
@@ -9,6 +9,7 @@
     <form action="" method="post">
         {% csrf_token %}
         {{form}}
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
