--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
@@ -80,7 +80,7 @@
                             <td>No</td>
                             {% endif %}
                                 
-                            <td><a href="{% url 'product_inventory' product.id %}">View</a></td>
+                            <td><a href="{% url 'product_inventory' product.id %}">Update</a></td>
                         </tr>
                         {% endfor %}
                             
