--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html
@@ -62,6 +62,7 @@
                             <th></th>
                             <th>Name</th>
                             <th>Price</th>
+                            <th>Quantity</th>
                             <th>Listed</th>
                             <th>Action</th>
                         </tr>
@@ -73,7 +74,7 @@
                             <td><img src="{{product.imageURL}}" alt="" width="30%"></td>
                             <td>{{ product.name }}</td>
                             <td>{{ product.price }}</td>
-                            
+                            <td>{{ product.stock_quantity }}</td>
                             {% if product.is_listed %}
                             <td>Yes</td>
                             {% else %}
