--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
+    <form method="POST" action="{% url 'product_inventory' product.id %}" enctype="multipart/form-data">
         {% csrf_token %}
         {{form}}
         <input type="submit" value="submit">
