modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/admin_portal.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/product_form.css

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -55,8 +55,9 @@
 
 
         <section>
+            <h1 class="add-product-headings">ADD NEW PRODUCT</h1>
             <div class="product_form">
-                <h1>ADD NEW PRODUCT</h1>
+                
                 <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
