--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
@@ -53,7 +53,7 @@
             </div>
             <section>
             <div class="orders">
-                <h4>Recent Orders</h4>
+                <h4 class="admin-main-headings">Recent Orders</h4>
                 <table>
                     <thead>
                         <tr>
@@ -126,7 +126,7 @@
             <!-- <div class="callender">
                 <iframe src="https://calendar.google.com/calendar/embed?height=209&wkst=1&ctz=Africa%2FNairobi&bgcolor=%23F6BF26&showTitle=0&showPrint=0&showTabs=0&src=ODdlMjA0MDk4YjQxODgzMzJkOGViMjkyNjkwMzQzNWRlNDM0NDYwNDc3NDIzMjMyMThmYTI2YzNjOWU3MzAxYUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4ua2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23A79B8E&color=%230B8043" style="border:solid 1px #777" width="320" height="209" frameborder="0" scrolling="no"></iframe>
             </div> -->
-            <h4>Recent Updates</h4>
+            <h4 class="admin-side-headings">Recent Updates</h4>
             <div class="updates">
                 <div class="update">
                     <p>Hello. Am Jane...</p>
@@ -144,7 +144,7 @@
                     <p>Hello. Am Jane...</p>
                 </div>
             </div>
-            <h4>Cancelled Order</h4>
+            <h4 class="admin-side-headings">Cancelled Order</h4>
             <div class="cancelled_orders">
                 <div class="cancelled_order">
                     <p>Hello. Am Jane...</p>
