--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/admin_portal.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/admin_portal.css
@@ -24,6 +24,21 @@ a {
 text-decoration: none;
 }
 
+.admin-main-headings {
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  padding: .5em 0;
+  margin-bottom: .5em;
+}
+.admin-side-headings {
+  text-align: center;
+  background-color: orange;
+  color: rgb(0, 0, 0);
+  padding: .5em 0;
+  margin-bottom: .5em;
+}
+
 .admin-dashboard .container {
 min-height: 100vh;
 width: 100%;
