--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/product_inventory.html
@@ -46,10 +46,11 @@
                 </div>
                 <div class="lead">
                     <h5>Out of Stock</h5>
-                    <p>{{ out_of_stck_count }}</p>
+                    <p>{{ out_of_stock_count }}</p>
                 </div>
                 <div class="lead">
                     <h5>Listed Products</h5>
+                    <p>{{ is_listed_count }}</p>
                 </div>
             </div>
 
