modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/0006_product_created_at.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/0007_remove_product_created_at.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/0008_product_created_at.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/0009_product_new_product.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/0010_remove_product_new_product.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/__pycache__/0006_product_created_at.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/__pycache__/0007_remove_product_created_at.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/__pycache__/0008_product_created_at.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/__pycache__/0009_product_new_product.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/__pycache__/0010_remove_product_new_product.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/models.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
@@ -130,6 +130,8 @@
                     <tbody>
                         
                         {% for product in products %}
+                        
+                        {% if product.new_products %}
                         <tr>
                             <td><img src="{{product.imageURL}}" alt="" width="30%"></td>
                             <td>{{ product.name }}</td>
@@ -143,6 +145,9 @@
                                 
                             <td><a href="{% url 'product_inventory' product.id %}">Update</a></td>
                         </tr>
+                        {% endif %}
+                            
+                        
                         {% endfor %}
                             
                         
