--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -131,7 +131,7 @@ $(document).on('click', '.reduce-quantity', function(e){
 });
 
 
-$(document).on('click', '.delete-item', function(e){
+$(document).on('click', '.remove-item', function(e){
     e.preventDefault();
     var productId = $(this).data('index');
     
