modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
@@ -8,4 +8,7 @@
 
 {% block content %}
     <h1>Category</h1>
+    {% for category in categories %}
+        <a href="#">{{ category }}</a>
+    {% endfor %}
 {% endblock content %}
