modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -33,9 +33,7 @@
                     <li>
                         <div class="dropdown"><a href="#">Category&#9662;</a>
                             <div class="dropdown-content">
-                                {% for category in categories %}
-                                <a href="#">{{ category }}</a>
-                                {% endfor %}
+                                <a href=""></a>
                             </div>
                         </div>
                     </li>
