modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -33,7 +33,10 @@
                     <li>
                         <div class="dropdown"><a href="#">Category&#9662;</a>
                             <div class="dropdown-content">
-                                <a href=""></a>
+                                <!-- {% for category in products %}
+                                    {{category}}
+                                {% endfor %} -->
+                                <a href="#">one</a>
                             </div>
                         </div>
                     </li>
