modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/settings.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/context_processors.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/context_processors.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -33,10 +33,10 @@
                     <li>
                         <div class="dropdown"><a href="#">Category&#9662;</a>
                             <div class="dropdown-content">
-                                <!-- {% for category in products %}
-                                    {{category}}
-                                {% endfor %} -->
-                                <a href="#">one</a>
+                                {% for category in categories %}
+                                <a href="#">{{category}}</a>
+                                {% endfor %}
+                                
                             </div>
                         </div>
                     </li>
