modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/context_processors.cpython-311.pyc
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/urls.cpython-311.pyc
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/context_processors.py
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/urls.py
	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -34,7 +34,7 @@
                         <div class="dropdown"><a href="#">Category&#9662;</a>
                             <div class="dropdown-content">
                                 {% for category in categories %}
-                                <a href="#">{{category}}</a>
+                                <a href="{% url 'category' foo=name %}">{{category}}</a>
                                 {% endfor %}
                                 
                             </div>
