Changes to be committed: 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/context_processors.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/context_processors.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/all_categories.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
@@ -2,14 +2,14 @@
 
 
 {% block title %}
-    Category
+    {{ category.name  }}' Category
 {% endblock title %}
     
 
 {% block content %}
 {% include 'store/include/hero.html' %}
 <section>
-    <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
+    <h3 class="section-title">{{ category.name}}' Category</h3>
     <div class= "product-container">
         
         {% for product in products %}
