--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
@@ -16,12 +17,27 @@
     <link rel="stylesheet" href="{% static 'css/cart.css' %}">
     <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
 
+
   
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script></head>
 <body>
     <div class="body-container">
     {% include 'store/include/navbar.html' %}
+
+    
+    
+        
     <div class="container">
+        {% if messages %}
+        
+        {% for message in messages %}
+        <div class="alert-message">
+            {{message}}
+            <button type="button" class="close-message">x</button>
+          </div>
+        {% endfor %}
+            
+    {% endif %}
     {% block content %}
         
     {% endblock content %}
@@ -62,9 +78,17 @@
                 }
             });
         });
+
+
+        $(document).on('click', '.close-message', function() {
+        // Get the parent element (alert-message) of the clicked close button
+        var message = $(this).parent('.alert-message');
+        // Hide the message
+        message.hide();
+    });
+
     
     </script>
-    
-        
+       
 </body>
 </html>
