--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -68,6 +68,7 @@
                 },
                 success: function(json){
                     $('.cart-quantity').text(json.qty);
+                    location.reload();
                 },
                 error: function(xhr, errmsg, err){
                     // Handle error
